--- a/cvas/style2.css
+++ b/cvas/style2.css
@@ -8,13 +8,54 @@
 
 body {
     font-family: 'Lato', sans-serif, Courier, monospace;
-    background-image: url(https://img.freepik.com/free-vector/turing-pattern-organic-lines-texture-background-vector-illustration_1017-38376.jpg?w=900&t=st=1674418785~exp=1674419385~hmac=62e087d0f42fe3f7aa6866f43798067757a0663902c37e52b5741992cec34298);
+    /**background-image: url(https://img.freepik.com/free-vector/turing-pattern-organic-lines-texture-background-vector-illustration_1017-38376.jpg?w=900&t=st=1674418785~exp=1674419385~hmac=62e087d0f42fe3f7aa6866f43798067757a0663902c37e52b5741992cec34298);*/
+    background-color: rgb(99, 171, 150);
 }
 
-header {
-    position: relative;
+
+
+.container {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 4fr 2fr 1fr;
+    column-gap: 5px;
     padding: 70px;
-    text-align: auto;
+    background-color: rgb(255, 255, 255);
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    margin-bottom: 0;
+}
+
+img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 0 35px rgb(54, 54, 54);
+    border: 10px solid rgb(99, 171, 150);
+    margin-left: 125px;
+    
+}
+
+.textoDescripcion  {
+    text-align: center;
+}
+
+.textoDescripcion h2 {
+    font-weight: 400;
+}
+
+.textoDescripcion h4 {
+    font-weight: 400;
+}
+
+
+
+/**
+header {
+    position: '';
+    padding: 70px;
+    text-align: '';
     background-color: rgb(255, 255, 255);
     color: rgb(46, 143, 114);
     font-family: 'Lato',sans-serif, Courier, monospace;
@@ -24,6 +65,13 @@ header {
     border: 5px solid;
     border-color: rgb(73, 131, 114)
 }
+
+p {
+    float: right;
+    font-size: 20px;
+    font-weight: 400;
+}
+*/
 /**
 header p {
     font-size: 20px;
@@ -31,7 +79,7 @@ header p {
     margin-right: 50px;
 }
 */
-.fotoPerfil {
+header .fotoPerfil {
     width: 300px;
     height: 300px;
     object-fit: cover;
@@ -39,30 +87,34 @@ header p {
     box-shadow: 0 0 50px rgb(131, 131, 131);
     border: 10px solid rgb(99, 171, 150);
     text-align: center;
-    margin-left: 125px;
+    margin-left: auto;
     margin-top: 50px;
-    display: inline-block;
+    
 }
-
-
-.boxTexto {
+/**
+header .boxTexto {
     float: right;
     text-align: center;
-    text-size-adjust: auto;
     font-size: 25px;
     margin-top: 130px;
-    margin-right: 200px;
+    margin-right: auto;
+    overflow: hidden;
 }
 
-
-
-.nombre {
+header .nombre {
     float: right;
-    margin-right: 75px;
+    margin-right: auto;
     margin-top: 0px;
     text-align: center;
+    overflow: hidden;
 }
 
+header .frontend {
+    float: right;
+    overflow: hidden;
+}
+*/
+/**
 .button {
     border-radius: 50px;
     border-color: rgb(6, 92, 99);
@@ -70,7 +122,7 @@ header p {
     color: rgb(6, 92, 99);
     text-align: center;
     font-size: 20px;
-    padding: 10px;
+    padding: auto;
     width: 250px;
     transition: all 0.5s;
     cursor: pointer;
@@ -78,10 +130,10 @@ header p {
     float: right;
 }
 
-
 .button span {
-    position: '';
+    position: auto;
     float: right;
+    text-align: center;
 }
 
 .button:hover  {
@@ -92,29 +144,58 @@ header p {
     opacity: 1;
     right: 0;
 }
-
+/**
+header .floatRight {
+    float: center;
+    text-align: right;
+}
+*/
 .navbar {
     margin-top: 0;
     margin-bottom: 0;
     padding: 20px;
-    font-family: 'Lato', sans-serif;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     font-size: 20px;
-    background-color: rgb(48, 48, 48);
-    color: aliceblue;
+    background-color: rgb(255, 255, 255);
+    color: rgb(49, 49, 49);
+    text-align: center;
+    
+}
+
+.navbar a:hover {
+    border: 3px sold;
+    border-color: rgb(0, 0, 0);
+    background-color: rgb(219, 218, 218);
+    font-size: 20px;
+    transition: 0.3s ease-in-out;
+}
+
+.navbar a {
+    color: rgb(49, 49, 49);
+    padding: 27px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+
 }
 
 .navbar :visited {
-    color: aliceblue;
+    border-width: 5px solid;
+    color: rgb(49, 49, 49);
     margin-bottom: 0;
 }
-/**
+*/
+/*
 .navbar:hover {
     font-size: 25px;
     transition: 0.5s;
     color: rgb(196, 41, 41);
     margin-bottom: 0;
 }
-
 */
 
 .seccion {
@@ -122,41 +203,58 @@ header p {
     padding: 70px;
     text-align: center;
     background-color: rgb(255, 255, 255);
-    color: rgb(46, 143, 114);
+    color: rg(46, 143, 114);
     font-family: 'Lato',sans-serif, Courier, monospace;
     margin-bottom: 0;
     margin-top: 0;
     border: 5px solid;
     border-color: rgb(73, 131, 114);
     font-size: 25px;
+    border-top-left-radius: 50px;
+    
 }
 
+.sobreMi1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: rgb(255, 255, 255);
+    padding: 70px;
+    text-align: center;
+
+}
 
 .conocimientos {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0px;
     padding: 70px;
     text-align: center;
-    background-color: rgb(255, 255, 255);
-    color: rgb(46, 143, 114);
+    background-color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: 25px;
-    
-    
+    font-weight: 300;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    overflow: hidden;
 }
 
-
-
-.something {
+.experiencia {
     margin-top: 0;
     margin-bottom: 0;
     padding: 70px;
     text-align: 'center';
     background-color: aliceblue;
-    color: rgb(46, 143, 114);
+    color: rgb(0, 0, 0);
     font-size: 25px;
+    font-weight: 300;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    overflow: auto;
 
 }
-
 
 .footer {
     padding: 70px;
@@ -168,13 +266,36 @@ header p {
     border-bottom-right-radius: 50px;
     margin-top: 0;
     font-size: 25px;
-    border: 5px solid;
-    border-color: rgb(73, 131, 114)
+    border: 0px solid;
+    border-top-color: rgb(73, 131, 114)
 }
-
-
-@media screen and (max-width: 600px) {
+/**
+@media  (max-width: 600px) {
     .boxTexto {
       width: 100%;
+    }
+}
+
+@media (max-width: 800px) {
+    .fotoPerfil {
+        margin: auto;
+        padding: auto;
+        float: '';
+    }
+}
+
+@media (min-width: 600px) {
+    .fotoPerfil {
+    text-align: center;
+    align-content: center;
+    display: 
+    }
+}
+
+@media (max-width: 500px) {
+    .conocimientos {
+        text-align: center;
+        margin: auto;
+        padding: auto;
     }
 }
