--- a/cvas/style2.css
+++ b/cvas/style2.css
@@ -6,39 +6,35 @@
     font-family: 'Lato', sans-serif Courier, monospace;
 }
 
+
 body {
     font-family: 'Lato', sans-serif, Courier, monospace;
-    /**background-image: url(https://img.freepik.com/free-vector/turing-pattern-organic-lines-texture-background-vector-illustration_1017-38376.jpg?w=900&t=st=1674418785~exp=1674419385~hmac=62e087d0f42fe3f7aa6866f43798067757a0663902c37e52b5741992cec34298);*/
-    background-colo: rgb(111, 133, 126);
-    
+    background-color: rgb(111, 133, 126);*/
 }
-
-
 
 .container {
     display: grid;
     align-items: center;
-    grid-template-columns: 4fr 4fr 0fr;
-    column-gap: 5px;
-    padding: 70px;
-    background-color: rgb(255, 255, 255);
+    grid-template-columns: 1fr 1fr 0fr;
+    column-gap: 0px;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
+    margin-top: 0;
     margin-bottom: 0;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    text-align: center;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    
 }
 
 img {
     width: 300px;
     height: 300px;
-    object-fit: cover;
     border-radius: 50%;
-    box-shado: 0 0 35px rgb(54, 54, 54);
+    object-fit: cover;
     border: 1px solid rgb(158, 158, 158);
-    margin-left: 125px;
+    margin-left: ;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 8px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-
 }
 
 .textoDescripcion  {
@@ -63,130 +59,29 @@ img {
     font-weight: 400;
 }
 
-
-
-/**
-header {
-    position: '';
-    padding: 70px;
-    text-align: '';
-    background-color: rgb(255, 255, 255);
-    color: rgb(46, 143, 114);
-    font-family: 'Lato',sans-serif, Courier, monospace;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    margin-bottom: 0;
-    border: 5px solid;
-    border-color: rgb(73, 131, 114)
-}
-
-p {
-    float: right;
-    font-size: 20px;
-    font-weight: 400;
-}
-*/
-/**
-header p {
-    font-size: 20px;
-    float: right;
-    margin-right: 50px;
-}
-*/
-header .fotoPerfil {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0 0 50px rgb(131, 131, 131);
-    border: 10px solid rgb(99, 171, 150);
-    text-align: center;
-    margin-left: auto;
-    margin-top: 50px;
-    
-}
-/**
-header .boxTexto {
-    float: right;
-    text-align: center;
-    font-size: 25px;
-    margin-top: 130px;
-    margin-right: auto;
-    overflow: hidden;
-}
-
-header .nombre {
-    float: right;
-    margin-right: auto;
-    margin-top: 0px;
-    text-align: center;
-    overflow: hidden;
-}
-
-header .frontend {
-    float: right;
-    overflow: hidden;
-}
-*/
-/**
-.button {
-    border-radius: 50px;
-    border-color: rgb(6, 92, 99);
-    background-color: rgb(255, 255, 255);
-    color: rgb(6, 92, 99);
-    text-align: center;
-    font-size: 20px;
-    padding: auto;
-    width: 250px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-    float: right;
-}
-
-.button span {
-    position: auto;
-    float: right;
-    text-align: center;
-}
-
-.button:hover  {
-    font-size: 25px;
-}
-
-.button:hover span {
-    opacity: 1;
-    right: 0;
-}
-/**
-header .floatRight {
-    float: center;
-    text-align: right;
-}
-*/
 .navbar {
+    text-align: center;
+    grid-template-columns: 1fr 1fr 0fr;
+    column-gap: 5px;
+    margin: px;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     padding: 20px;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
-    font-size: 20px;
+    font-size: 25px;
     background-color: rgb(255, 255, 255);
     color: rgb(49, 49, 49);
-    text-align: center;
-    text-decoration: none;
-    
-    
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .navbar a:hover {
     background-color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 25px;
     text-decoration: none;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    
 }
 
 .navbar a {
@@ -199,7 +94,6 @@ header .floatRight {
     text-decoration: none;
     border: 0px solid rgb(99, 171, 150);
     transition: box-shadow .3s;
-
 }
 
 .navbar :visited {
@@ -208,35 +102,71 @@ header .floatRight {
     margin-bottom: 0;
     text-decoration: none;
 }
-*/
-/*
-.navbar:hover {
-    font-size: 25px;
-    transition: 0.5s;
-    color: rgb(196, 41, 41);
-    margin-bottom: 0;
-}
-*/
 
-.seccion {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 0fr 0fr 1fr;
-    column-gap: 5px;
-    margin: 0;
-    padding: 70px;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-    color: rg(46, 143, 114);
-    font-family: 'Lato',sans-serif, Courier, monospace;
-    margin-bottom: 0;
-    margin-top: 0;
-    border: 5px solid;
-    border-color: rgb(73, 131, 114);
-    font-size: 25px;
+.botonMenuChico {
+    margin-bottom: 10px;
+    padding: 20px;
     border-top-left-radius: 50px;
-    
-    
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    font-size: 25px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(49, 49, 49);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.botonMenuChico:hover {
+    background-color: rgb(255, 255, 255);
+    font-size: 25px;
+    text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.menuChico {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.colapsableContenido {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    margin-bottom: 10px;
+    padding: 20px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    font-size: 25px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(49, 49, 49);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.colapsableContenido a {
+    display: block;
+    color: rgb(49, 49, 49);
+    padding: 27px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    text-decoration: none;
+    border: 0px solid rgb(99, 171, 150);
+    transition: box-shadow .3s;
+}
+
+.colapsableContenido a:hover {
+    background-color: rgb(255, 255, 255);
+    font-size: 25px;
+    text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.show {
+    display: block;
 }
 
 .sobreMi1 {
@@ -252,14 +182,13 @@ header .floatRight {
     overflow: auto;
     font-family: 'Lato', Courier, monospace;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-
 }
 
 .webDesign {
     margin-top: 0;
     margin-bottom: 0px;
     padding: 70px;
-    text-align: ;
+    text-align: center;
     color: rgb(0, 0, 0);
     font-size: 25px;
     font-weight: 300;
@@ -269,6 +198,7 @@ header .floatRight {
     border-bottom-right-radius: 50px;
     border: 1px solid rgb(99, 171, 150);
     transition: box-shadow .3s;
+    overflow: hidden;
 }
 
 .webDesign:hover {
@@ -294,7 +224,7 @@ header .floatRight {
     border-bottom-right-radius: 50px;
     border: 1px solid rgb(99, 171, 150);
     transition: box-shadow .3s;
-
+    overflow: hidden;
 }
 
 .experiencia:hover {
@@ -308,6 +238,10 @@ header .floatRight {
 }
 
 .footer {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 5px;
     padding: 70px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -321,31 +255,81 @@ header .floatRight {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
+.footer :visited {
+    color: rgb(0, 0, 0);
+}
+
 .logoInstagram {
-    float: left;
+    display: inline-block;
+}
+
+.logoGithub {
+    display: inline-block;   
+}
+
+.logolinkedIn {
+    display: inline-block;
+}
+
+.logoTwitter {
+    display: inline-block;  
 }
 
 
-/**
+@media screen and (max-width: 600px) {
+    .navbar a.icon {
+        float: right;
+        display: block
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .navbar {
+        display: none;
+    }
+}
+
+
+@media screen and (min-width: 600px) {
+    .menuChico {
+        display: none
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .prueba {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .prueba2 {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .prueba3 {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .prueba4 {
+        display: none;
+    }
+}
+
 @media  (max-width: 600px) {
     .boxTexto {
       width: 100%;
     }
 }
 
-@media (max-width: 800px) {
-    .fotoPerfil {
-        margin: auto;
-        padding: auto;
-        float: '';
-    }
-}
-
 @media (min-width: 600px) {
     .fotoPerfil {
     text-align: center;
-    align-content: center;
-    display: 
+    align-content: center; 
     }
 }
 
@@ -356,3 +340,55 @@ header .floatRight {
         padding: auto;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .container {
+        display: grid;
+        text-align: center;
+        width: auto;
+        grid-template-columns: 0fr 0fr 0fr;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .img {
+        display: flex;
+        text-align: center;
+        margin-left: 5px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .sobreMi1 {
+        display: block;
+        text-align: center;
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .footer {
+        display: block;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .webDesign {
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    * {
+        margin: 0px;
+        padding: 0px;
+    }
+}
+
