--- a/cvas/style2.css
+++ b/cvas/style2.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Lato', sans-serif, Courier, monospace;
-    background-color: rgb(111, 133, 126);*/
+    background-color: rgb(111, 133, 126);
 }
 
 .container {
